feat(creditsEditor): seed editing locale from UI locale (B.2)